// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectField > renders 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-day"
  >
    Day
  </label>
  <div
    class="relative"
  >
    <select
      aria-invalid="false"
      class="w-full appearance-none rounded-box border-tip py-2 pl-3 pr-9 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border bg-white"
      id="field-day"
    >
      <option
        value="Lun"
      >
        Monday
      </option>
      <option
        value="Mar"
      >
        Tuesday
      </option>
    </select>
    <span
      class="pointer-events-none absolute inset-y-0 right-3 flex items-center text-tip"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`SelectField > renders with an error 1`] = `
<div
  class="flex flex-col gap-1"
>
  <label
    class="text-sm font-semibold"
    for="field-day"
  >
    Day
  </label>
  <div
    class="relative"
  >
    <select
      aria-describedby="field-day-error"
      aria-invalid="true"
      class="w-full appearance-none rounded-box border-tip py-2 pl-3 pr-9 text-sm outline-none focus:border-third disabled:cursor-not-allowed disabled:bg-palette-bg1 border-2 bg-app-error/10"
      id="field-day"
    >
      <option
        value="Lun"
      >
        Monday
      </option>
      <option
        value="Mar"
      >
        Tuesday
      </option>
    </select>
    <span
      class="pointer-events-none absolute inset-y-0 right-3 flex items-center text-tip"
    >
      <svg
        aria-hidden="true"
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </div>
  <span
    class="text-xs text-app-error"
    id="field-day-error"
  >
    Day is required
  </span>
</div>
`;
